--- a/LC_PP_PROGRAM/package.json
+++ b/LC_PP_PROGRAM/package.json
@@ -9,5 +9,12 @@
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "zod": "^3.24.1"
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3"
+  }
 }
