--- a/LC_PP_PROGRAM/package.json
+++ b/LC_PP_PROGRAM/package.json
@@ -1,20 +1,17 @@
 {
-  "name": "programming-problems",
+  "name": "ts-project",
   "version": "1.0.0",
+  "description": "A fresh TypeScript setup",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node --loader ts-node/esm main.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "zod": "^3.24.1"
+    "start": "tsx Day1/reverse_string_day1.ts",
+    "build": "tsc",
+    "dev": "tsx watch Day1/reverse_main.ts"
   },
   "devDependencies": {
     "ts-node": "^10.9.2",
+    "tsx": "^4.7.1",
     "typescript": "^5.7.3"
   }
 }
