--- a/LC_PP_PROGRAM/tsconfig.json
+++ b/LC_PP_PROGRAM/tsconfig.json
@@ -1,13 +1,13 @@
 {
   "compilerOptions": {
-    "module": "ESNext", // Use ESNext module system for ESM
-    "target": "ES6", // Target modern JS
-    "moduleResolution": "node", // Use Node module resolution strategy
-    "esModuleInterop": true, // Enable compatibility for commonjs modules
-    "skipLibCheck": true, // Ignore type errors in node_modules
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "strict": true, // Enable strict type checking
-    "outDir": "./dist" // Output compiled files here (optional)
-  },
-  "include": ["main.ts"]
+    "rootDir": "./",
+    "outDir": "./dist"
+  }
 }
