--- a/LC_PP_PROGRAM/package.json
+++ b/LC_PP_PROGRAM/package.json
@@ -7,9 +7,15 @@
   "scripts": {
     "start": "tsx Day1/reverse_string_day1.ts",
     "build": "tsc",
-    "dev": "tsx watch Day1/reverse_main.ts"
+    "dev": "tsx watch Day1/reverse_main.ts",
+    "test": "jest"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.26.0",
+    "@jest/globals": "^29.7.0",
+    "@types/jest": "^29.5.14",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.6",
     "ts-node": "^10.9.2",
     "tsx": "^4.7.1",
     "typescript": "^5.7.3"
