--- a/LC_PP_PROGRAM/package.json
+++ b/LC_PP_PROGRAM/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "tsx Day2/parse_log_entriesday2.ts",
+    "start": "tsx Day3/findpairs_day3.ts",
     "build": "tsc",
-    "dev": "tsx watch Day2/parse_log_entriesday2.ts",
+    "dev": "tsx watch Day3/findpairs_day3.ts",
     "test": "jest"
   },
   "devDependencies": {
